--- a/MuddyGames-gameplay-programming-i-lab-08-92742c3e0e2f/SFMLOpenGL/SFMLOpenGL.vcxproj
+++ b/MuddyGames-gameplay-programming-i-lab-08-92742c3e0e2f/SFMLOpenGL/SFMLOpenGL.vcxproj
@@ -159,6 +159,8 @@
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Matrix3.cpp" />
+    <ClCompile Include="Vector3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
